preparing for github publication test